[fix] another overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ h1{
 .participant-info {
   background-color: antiquewhite;
   height: 100%;
-  width: 20%;
+  width: 18%;
   border-radius: 1rem;
   padding: 0.5rem;
   display: flex;
